@@ -20,7 +20,7 @@ public class ProductService {
         List<Product> products = productRepository.findAllByProductSellingTypeIn(ProductSellingStatus.forDisplay());
         return products.stream()
                 .map(ProductResponse::of)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
